                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.4


  Changes with Apache Traffic Server 3.3.3


  *) [TS-1936] Make traffic_logstats honor the log-directory as intended.

  *) [TS-1937] Prevent assert on SSL forward proxy connect.

  *) [TS-1907] Using the "ipv6" option for port configuration cancels the "ssl" option.

  *) [TS-1927] Make ats_base64_decode able to handle the URL variant

  *) [TS-1207] Move cacheurl plugin out of experimental

  *) [TS-1857] On CentOS the Lua plugin is built whether Lua is found or not.

  *) [TS-1492]  Prevent net-throttling from locking out the health checks
   from traffic_cop.

  *) [TS-1827] Make combo_handler be enabled via remap.config, and
   various other cleanup fixes. Author: Conan Wang and Leif.

  *) [TS-1932] Use a more modern tar format so asf-dist can handle
   file paths longer that 99 bytes

  *) [TS-1891] Add double-free checking for reclaimable freelist
    Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1926] Require Lua v5.1, by checking for lua_getfenv(). This is
   necessary since we are incompatible with Lua v5.2 (for now).

  *) [TS-1921] Fix reclaimable freelist getting stuck in infinite loop.
    Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1824] TSHttpTxnPushedRespHdrBytesGet() takes an int argument in the
   implementation, whereas the prototype does not have this.

  *) [TS-1928] False warning when setting log rotation size to exactly 10.

  *) [TS-1812] Remove obsolete syslog_thr_init calls.

  *) [TS-1825] TSPortDescriptorAccept does not use it's argument.

  *) [TS-1925] Remove obsolete MMH hash API.

  *) [TS-1924] Add metalink plugin documentation.
    Author: Jack Bates <jack@nottheoilrig.com>

  *) [TS-1913] Fix memory issue caused by resolve_logfield_string()
    Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1915]  header_rewrite uses TSUrlHostSet() when using set-destination